src/objects/ContPaymentAssoc__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Payment__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Payment_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract_Payment External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>R00N40000001hQHzEAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>R00N40000001hQI9EAM</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Payment</label>
    <nameField>
        <displayFormat>ContPayment-{0000}</displayFormat>
        <label>Contract Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>